fix card height change when error box get visible

--- a/src/polkadot.scss
+++ b/src/polkadot.scss
@@ -87,6 +87,7 @@ $input-height: 2.5rem;
   color: #e6007a;
   margin-left: 0.5rem;
   margin-top: 0.5rem !important;
+  min-height: 1.5rem;
 }
 
 .warning {
